...
            testID = "map-tab";
          } else if (route.name === "MyAddresses") {
            iconName = focused ? "bookmark" : "bookmark-outline";
            testID = "my-addresses-tab";
          } else if (route.name === "Profile") {
            iconName = focused ? "person" : "person-outline";
            testID = "profile-tab";
          } else {
            iconName = "location-outline";
            testID = "default-tab";
          }

          return (
...
